flex方式完成携程网页面布局

--- a/H5-Flex/index.html
+++ b/H5-Flex/index.html
@@ -10,10 +10,183 @@
 </head>
 
 <body>
+    <!-- 搜索  -->
     <div class="search_index">
         <div class="search">搜索:目的地/旅游/景点/航班号</div>
         <a href="" class="user">我 的</a>
     </div>
+    <!-- 焦点图 -->
+    <div class="focus">
+        <img src="./upload/focus.jpg" alt="">
+    </div>
+    <!-- 导航local-nav -->
+    <ul class="local-nav">
+        <li>
+            <a href="#" title="景点玩乐">
+                <span class="local_nav_icon_1"></span>
+                <span>景点.玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点玩乐">
+                <span class="local_nav_icon_2"></span>
+                <span>景点.玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点玩乐">
+                <span class="local_nav_icon_3"></span>
+                <span>景点.玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点玩乐">
+                <span class="local_nav_icon_4"></span>
+                <span>景点.玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点玩乐">
+                <span class="local_nav_icon_5"></span>
+                <span>景点.玩乐</span>
+            </a>
+        </li>
+
+
+    </ul>
+
+    <!-- 导航 nav -->
+    <nav>
+        <div class="nav_common">
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+        </div>
+        <div class="nav_common">
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+        </div>
+        <div class="nav_common">
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav_common_icon">
+                <a href="#">特价酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- subnav-entry 侧导航栏 -->
+    <ul class="subnav_entry">
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav_entry_icon"></span>
+                <span>景点</span>
+            </a>
+        </li>
+
+    </ul>
+
+    <!--销售模块  -->
+    <div class="sales_box">
+        <div class="sales_hd">
+            <h2>销售</h2>
+            <a href="#" class="more">更多福利优惠</a>
+        </div>
+
+        <div class="sales_bd">
+            <div class="row">
+                <a href="#"><img src="./upload/pic1.jpg" alt=""></a>
+                <a href="#"><img src="./upload/pic2.jpg" alt=""></a>
+            </div>
+            <div class="row">
+                <a href="#"><img src="./upload/pic3.jpg" alt=""></a>
+                <a href="#"><img src="./upload/pic4.jpg" alt=""></a>
+            </div>
+            <div class="row">
+                <a href="#"><img src="./upload/pic5.jpg" alt=""></a>
+                <a href="#"><img src="./upload/pic6.jpg" alt=""></a>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
